// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: access denied 1`] = `<Unauthorized />`;

exports[`should render correctly: cannot submit 1`] = `
<div
  className="page-wrapper-simple"
>
  <div
    className="page-simple"
  >
    <h1
      className="text-center bg-danger big padded"
    >
      users.change_admin_password.instance_is_at_risk
    </h1>
    <p
      className="text-center huge huge-spacer-top"
    >
      users.change_admin_password.header
    </p>
    <p
      className="text-center huge-spacer-top huge-spacer-bottom"
    >
      users.change_admin_password.description
    </p>
    <form
      className="text-center"
      onSubmit={[Function]}
    >
      <h2
        className="big-spacer-bottom big"
      >
        users.change_admin_password.form.header
      </h2>
      <MandatoryFieldsExplanation
        className="form-field"
      />
      <div
        className="form-field"
      >
        <label
          htmlFor="user-password"
        >
          users.change_admin_password.form.password
          <MandatoryFieldMarker />
        </label>
        <input
          id="user-password"
          name="password"
          onChange={[Function]}
          required={true}
          type="password"
          value="password"
        />
      </div>
      <div
        className="form-field"
      >
        <label
          htmlFor="confirm-user-password"
        >
          users.change_admin_password.form.confirm
          <MandatoryFieldMarker />
        </label>
        <input
          id="confirm-user-password"
          name="confirm-password"
          onChange={[Function]}
          required={true}
          type="password"
          value="confirm"
        />
      </div>
      <div
        className="form-field"
      >
        <SubmitButton
          disabled={true}
        >
          update_verb
        </SubmitButton>
      </div>
    </form>
  </div>
</div>
`;

exports[`should render correctly: default 1`] = `
<div
  className="page-wrapper-simple"
>
  <div
    className="page-simple"
  >
    <h1
      className="text-center bg-danger big padded"
    >
      users.change_admin_password.instance_is_at_risk
    </h1>
    <p
      className="text-center huge huge-spacer-top"
    >
      users.change_admin_password.header
    </p>
    <p
      className="text-center huge-spacer-top huge-spacer-bottom"
    >
      users.change_admin_password.description
    </p>
    <form
      className="text-center"
      onSubmit={[Function]}
    >
      <h2
        className="big-spacer-bottom big"
      >
        users.change_admin_password.form.header
      </h2>
      <MandatoryFieldsExplanation
        className="form-field"
      />
      <div
        className="form-field"
      >
        <label
          htmlFor="user-password"
        >
          users.change_admin_password.form.password
          <MandatoryFieldMarker />
        </label>
        <input
          id="user-password"
          name="password"
          onChange={[Function]}
          required={true}
          type="password"
          value="password"
        />
      </div>
      <div
        className="form-field"
      >
        <label
          htmlFor="confirm-user-password"
        >
          users.change_admin_password.form.confirm
          <MandatoryFieldMarker />
        </label>
        <input
          id="confirm-user-password"
          name="confirm-password"
          onChange={[Function]}
          required={true}
          type="password"
          value="confirm"
        />
      </div>
      <div
        className="form-field"
      >
        <SubmitButton
          disabled={false}
        >
          update_verb
        </SubmitButton>
      </div>
    </form>
  </div>
</div>
`;

exports[`should render correctly: submitting 1`] = `
<div
  className="page-wrapper-simple"
>
  <div
    className="page-simple"
  >
    <h1
      className="text-center bg-danger big padded"
    >
      users.change_admin_password.instance_is_at_risk
    </h1>
    <p
      className="text-center huge huge-spacer-top"
    >
      users.change_admin_password.header
    </p>
    <p
      className="text-center huge-spacer-top huge-spacer-bottom"
    >
      users.change_admin_password.description
    </p>
    <form
      className="text-center"
      onSubmit={[Function]}
    >
      <h2
        className="big-spacer-bottom big"
      >
        users.change_admin_password.form.header
      </h2>
      <MandatoryFieldsExplanation
        className="form-field"
      />
      <div
        className="form-field"
      >
        <label
          htmlFor="user-password"
        >
          users.change_admin_password.form.password
          <MandatoryFieldMarker />
        </label>
        <input
          id="user-password"
          name="password"
          onChange={[Function]}
          required={true}
          type="password"
          value="password"
        />
      </div>
      <div
        className="form-field"
      >
        <label
          htmlFor="confirm-user-password"
        >
          users.change_admin_password.form.confirm
          <MandatoryFieldMarker />
        </label>
        <input
          id="confirm-user-password"
          name="confirm-password"
          onChange={[Function]}
          required={true}
          type="password"
          value="confirm"
        />
      </div>
      <div
        className="form-field"
      >
        <SubmitButton
          disabled={true}
        >
          update_verb
          <i
            className="spinner spacer-left"
          />
        </SubmitButton>
      </div>
    </form>
  </div>
</div>
`;

exports[`should render correctly: success 1`] = `
<div
  className="page-wrapper-simple"
>
  <div
    className="page-simple"
  >
    <Alert
      variant="success"
    >
      <p
        className="spacer-bottom"
      >
        users.change_admin_password.form.success
      </p>
      <a
        href="/"
      >
        users.change_admin_password.form.continue_to_app
      </a>
    </Alert>
  </div>
</div>
`;

exports[`should render correctly: trying to use default admin password 1`] = `
<div
  className="page-wrapper-simple"
>
  <div
    className="page-simple"
  >
    <h1
      className="text-center bg-danger big padded"
    >
      users.change_admin_password.instance_is_at_risk
    </h1>
    <p
      className="text-center huge huge-spacer-top"
    >
      users.change_admin_password.header
    </p>
    <p
      className="text-center huge-spacer-top huge-spacer-bottom"
    >
      users.change_admin_password.description
    </p>
    <form
      className="text-center"
      onSubmit={[Function]}
    >
      <h2
        className="big-spacer-bottom big"
      >
        users.change_admin_password.form.header
      </h2>
      <MandatoryFieldsExplanation
        className="form-field"
      />
      <div
        className="form-field"
      >
        <label
          htmlFor="user-password"
        >
          users.change_admin_password.form.password
          <MandatoryFieldMarker />
        </label>
        <input
          id="user-password"
          name="password"
          onChange={[Function]}
          required={true}
          type="password"
          value="admin"
        />
      </div>
      <div
        className="form-field"
      >
        <label
          htmlFor="confirm-user-password"
        >
          users.change_admin_password.form.confirm
          <MandatoryFieldMarker />
        </label>
        <input
          id="confirm-user-password"
          name="confirm-password"
          onChange={[Function]}
          required={true}
          type="password"
          value="admin"
        />
        <Alert
          className="spacer-top"
          variant="warning"
        >
          users.change_admin_password.form.cannot_use_default_password
        </Alert>
      </div>
      <div
        className="form-field"
      >
        <SubmitButton
          disabled={false}
        >
          update_verb
        </SubmitButton>
      </div>
    </form>
  </div>
</div>
`;
